--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<!-- Declares the document type and version to be HTML5 -->
+<!-- Declares the document as HTML5 -->
 <HTML lang="en">
-<!-- Opens the HTML document and sets the language attribute to English -->
-<HEAD>
-  <!-- Opens the head section of the HTML document -->
-  <TITLE>HBNB</TITLE>
-  <!-- Sets the title of the HTML document to 'HBNB' -->
-</HEAD>
-<BODY>
-  <!-- Opens the body section of the HTML document -->
-  <H1>Number: {{ n }}</H1>
-  <!-- Displays a heading with the text 'Number: ' followed by the value of the variable 'n' -->
-</BODY>
+    <!-- Begins the HTML document and sets the language to English -->
+    <HEAD>
+        <!-- Starts the head section of the document -->
+        <TITLE>HBNB</TITLE>
+        <!-- Sets the title of the HTML document to 'HBNB' -->
+    </HEAD>
+    <BODY>
+        <!-- Begins the body section of the document -->
+        {% if n %}
+        <!-- Checks if the variable 'n' is defined -->
+        <H1>Number: {{ n }}</H1>
+        <!-- Displays 'Number: <value of n>' inside an H1 heading -->
+        {% endif %}
+        <!-- Ends the if condition -->
+    </BODY>
+    <!-- Closes the body section of the document -->
 </HTML>
+<!-- Closes the HTML document -->
