--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<!-- Declares the document type and version to be HTML5 -->
 <HTML lang="en">
-<!-- Opens the HTML document and sets the language attribute to English -->
-<HEAD>
-  <!-- Opens the head section of the HTML document -->
-  <TITLE>HBNB</TITLE>
-  <!-- Sets the title of the HTML document to 'HBNB' -->
-</HEAD>
-<BODY>
-  <!-- Opens the body section of the HTML document -->
-  {% if n is divisibleby 2 %}
-  <!-- Checks if the variable 'n' is divisible by 2 (i.e., 'n' is even) -->
-  <H1>Number: {{ n }} is even</H1>
-  <!-- Displays a heading indicating that 'n' is even -->
-  {% else %}
-  <!-- If 'n' is not divisible by 2 (i.e., 'n' is odd) -->
-  <H1>Number: {{ n }} is odd</H1>
-  <!-- Displays a heading indicating that 'n' is odd -->
-  {% endif %}
-</BODY>
+    <HEAD>
+        <!-- Title of the web page -->
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <!-- Check if the number 'n' is divisible by 2 -->
+        {% if n is divisibleby(2) %}
+            <!-- If 'n' is even, display this message -->
+            <H1>Number: {{ n }} is even</H1>
+        {% else %}
+            <!-- If 'n' is odd, display this message -->
+            <H1>Number: {{ n }} is odd</H1>
+        {% endif %}
+    </BODY>
 </HTML>
